--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.0",
         "@symfony/webpack-encore": "^0.29.0",
         "bootstrap": "^4.4.1",
         "core-js": "^3.0.0",
@@ -17,5 +18,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootswatch": "^4.4.1"
     }
 }
